--- a/스파르타 과제/3. Django, DRF/templates/footer.html
+++ b/스파르타 과제/3. Django, DRF/templates/footer.html
@@ -2,11 +2,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h5>Django Blog</h5>
-                <p class="text-muted">Django와 Bootstrap으로 만든 블로그 프로젝트입니다.</p>
+                <h5>JY's Blog</h5>
+                <p class="text-muted">스파르타 장고 과제.</p>
             </div>
             <div class="col-md-6 text-md-end">
-                <p class="mb-0 text-muted">&copy; 2025 Django Blog. © [Yang Ju Young] - Practice Project</p>
+                <p class="mb-0 text-muted">&copy; 2025 JY's Blog.</p>
             </div>
         </div>
     </div>
