--- a/스파르타 과제/3. Django, DRF/templates/navbar.html
+++ b/스파르타 과제/3. Django, DRF/templates/navbar.html
@@ -1,42 +1,85 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container">
-        <a class="navbar-brand fw-bold" href="{% url 'post:post_list' %}">
-            <i class="fas fa-blog me-2"></i>Django Blog
+<style>
+    nav {
+        background-color: #FFB6C1;
+        padding: 1rem;
+    }
+
+    .nav-container {
+        max-width: 1200px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .nav-brand {
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 1.5rem;
+    }
+
+    .nav-menu {
+        display: flex;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .nav-item {
+        margin-left: 2rem;
+    }
+
+    .nav-link {
+        color: white;
+        text-decoration: none;
+    }
+
+    .nav-link i {
+        margin-right: 0.5rem;
+    }
+
+    @media (max-width: 768px) {
+        .nav-menu {
+            display: none;
+        }
+    }
+</style>
+
+<nav>
+    <div class="nav-container">
+        <a class="nav-brand" href="{% url 'post:post_list' %}">
+            <i class="fas fa-blog"></i> JY's Blog
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'post:post_create' %}">
-                            <i class="fas fa-plus me-1"></i>새 글 작성
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user:profile' %}">
-                            <i class="fas fa-user me-1"></i>{{ user.username }}
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user:logout' %}">
-                            <i class="fas fa-sign-out-alt me-1"></i>로그아웃
-                        </a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user:login' %}">
-                            <i class="fas fa-sign-in-alt me-1"></i>로그인
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user:signup' %}">
-                            <i class="fas fa-user-plus me-1"></i>회원가입
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
+        <ul class="nav-menu">
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'post:post_create' %}">
+                        <i class="fas fa-plus"></i>새 글 작성
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user:profile' %}">
+                        <i class="fas fa-user"></i>{{ user.username }}
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user:logout' %}">
+                        <i class="fas fa-sign-out-alt"></i>로그아웃
+                    </a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user:login' %}">
+                        <i class="fas fa-sign-in-alt"></i>로그인
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user:signup' %}">
+                        <i class="fas fa-user-plus"></i>회원가입
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
     </div>
 </nav>
