--- a/스파르타 과제/3. Django, DRF/templates/base.html
+++ b/스파르타 과제/3. Django, DRF/templates/base.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome 추가 -->
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <!-- jQuery 추가 -->
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -20,9 +19,6 @@
 
     {% include 'footer.html' %}
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- 좋아요 기능을 위한 JavaScript 코드 추가 -->
     <script>
     $(document).ready(function() {
         $('.like-button').click(function() {
@@ -37,9 +33,9 @@
                 },
                 success: function(data) {
                     if (data.liked) {
-                        button.removeClass('btn-outline-danger').addClass('btn-danger');
+                        button.addClass('liked');
                     } else {
-                        button.removeClass('btn-danger').addClass('btn-outline-danger');
+                        button.removeClass('liked');
                     }
                     button.find('.like-count').text(data.total_likes);
                 }
