--- a/스파르타 과제/3. Django, DRF/templates/accounts/login.html
+++ b/스파르타 과제/3. Django, DRF/templates/accounts/login.html
@@ -9,7 +9,7 @@
         <button type="submit" class="btn btn-primary">로그인</button>
     </form>
     <p class="mt-3">
-        계정이 없으신가요? <a href="{% url 'user:signup' %}">회원가입</a>
+        계정이 없으신가요? <a href="{% url 'accounts:signup' %}">회원가입</a>
     </p>
 </div>
 {% endblock %}
