--- a/스파르타 과제/3. Django, DRF/templates/accounts/signup.html
+++ b/스파르타 과제/3. Django, DRF/templates/accounts/signup.html
@@ -9,7 +9,7 @@
         <button type="submit" class="btn btn-primary">가입하기</button>
     </form>
     <p class="mt-3">
-        이미 계정이 있으신가요? <a href="{% url 'user:login' %}">로그인</a>
+        이미 계정이 있으신가요? <a href="{% url 'accounts:login' %}">로그인</a>
     </p>
 </div>
 {% endblock %}
