--- a/스파르타 과제/3. Django, DRF/templates/accounts/profile_update.html
+++ b/스파르타 과제/3. Django, DRF/templates/accounts/profile_update.html
@@ -22,7 +22,7 @@
         {% endfor %}
         
         <button type="submit" class="btn btn-primary">수정하기</button>
-        <a href="{% url 'user:profile' %}" class="btn btn-secondary">취소</a>
+        <a href="{% url 'accounts:profile' %}" class="btn btn-secondary">취소</a>
     </form>
 </div>
 {% endblock %}
